# what-i-did-today-telegram-bot

./: .gitignore  Dockerfile  LICENSE  README.md  bot.py  docker-compose.yml.sample  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
src/: bot.py  db.py  reporting.py
src/templates/: normal.jinja  skip.jinja
utility_scripts/: convert_export_files_to_csv.py  export_db.py
widt/: bot.py  config.py  db.py  email_verification.py  export.py  journal.py  meta.py  reporting.py
widt/templates/: skip.jinja
widt/tests/: test_bot.py  test_config.py  test_journal.py
