[project]
name = "what-i-did-today-telegram-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-firestore==1.6.0",
    "jinja2==2.11.3",
    "markdown2==2.3.9",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "python-telegram-bot==12.0.0",
    "retrying==1.3.3",
    "ujson==1.35",
]
